# barrzen-axum-kit

./: AGENTS.md  Cargo.toml  README.md  RELEASE.md  release-plz.toml
.github/workflows/: ci.yml  publish.yml  release-pr.yml  release.yml
crates/barrzen-axum-core/: CHANGELOG.md  Cargo.toml  README.md
crates/barrzen-axum-core/src/: app_builder.rs  banner.rs  build_info.rs  handlers.rs  lib.rs  response.rs
crates/barrzen-axum-core/src/config/: app.rs  banner.rs  cache.rs  cors.rs  features.rs  http.rs  logging.rs  mod.rs
crates/barrzen-axum-infra/: CHANGELOG.md  Cargo.toml  README.md
crates/barrzen-axum-infra/src/: lib.rs
crates/barrzen-axum-obs/: CHANGELOG.md  Cargo.toml  README.md
crates/barrzen-axum-obs/src/: lib.rs
crates/barrzen-axum-openapi/: CHANGELOG.md  Cargo.toml  README.md
crates/barrzen-axum-openapi/src/: lib.rs
scripts/: test_matrix.sh
