[package]
name = "barrzen-axum-openapi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/barrzen-axum-openapi"
description = "OpenAPI documentation for Barrzen Axum applications"

[lints]
workspace = true

[features]
default = []

# OpenAPI support
openapi = ["utoipa", "utoipa-swagger-ui"]

[dependencies]
# Core
axum.workspace = true

# Optional: OpenAPI
utoipa = { workspace = true, optional = true }
utoipa-swagger-ui = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
